# webbOS

./: .gitignore  AGENTS.md  Cargo.toml  KIMI_CONTEXT.md  Makefile  README.md  STATUS.md  TODO.md  boot_output.txt  build_errors.txt  build_errors2.txt  build_errors3.txt  build_errors4.txt  build_errors5.txt  build_errors_p9.txt  build_errors_p9b.txt  build_errors_p9c.txt  build_errors_p9d.txt  fix-image.ps1  run.bat  rust-toolchain.toml  spec.md  update-image.py  urs.md
bootloader/: Cargo.toml
bootloader/src/: main.rs  memory.rs  paging.rs
docs/: BUILD.md  (+7 more)
kernel/: Cargo.toml
kernel/src/: main.rs  panic.rs
kernel/src/arch/: cpu.rs  gdt.rs  interrupts.rs  linker.ld  mod.rs  paging.rs
kernel/src/browser/: css.rs  html.rs  js.rs  layout.rs  mod.rs  render.rs  wasm.rs
kernel/src/console/: mod.rs  serial.rs  vga.rs
kernel/src/crypto/: mod.rs
kernel/src/crypto/aes/: mod.rs
kernel/src/crypto/chacha20/: mod.rs
kernel/src/crypto/hkdf/: mod.rs
kernel/src/crypto/sha256/: mod.rs
kernel/src/crypto/sha384/: mod.rs
kernel/src/crypto/x25519/: mod.rs
kernel/src/desktop/: mod.rs  vesa_login.rs
kernel/src/drivers/: mod.rs  pci.rs  timer.rs
kernel/src/fs/: initrd.rs  mod.rs
kernel/src/graphics/: mod.rs
kernel/src/mm/: allocator.rs  bump.rs  mod.rs
kernel/src/net/: arp.rs  dhcp.rs  dns.rs  ip.rs  mod.rs  socket.rs  tcp.rs  udp.rs
kernel/src/process/: context.rs  mod.rs  scheduler.rs
kernel/src/storage/: ahci.rs  ata.rs  mod.rs  nvme.rs
kernel/src/syscall/: mod.rs
kernel/src/testing/: mod.rs
kernel/src/tls/: mod.rs
kernel/src/users/: mod.rs
(+30 files in other folders)
